Doc/force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Active_Modules__c.field-meta.xml
<CustomField>
    <fullName>Active_Modules__c</fullName>
    <label>Active Modules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>