Doc/force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Global_Notification_Count__c.field-meta.xml
<CustomField>
    <fullName>Global_Notification_Count__c</fullName>
    <label>Global Notification Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>