Doc/force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Last_SRT_Checkin__c.field-meta.xml
<CustomField>
    <fullName>Last_SRT_Checkin__c</fullName>
    <label>Last SRT Checkin</label>
    <type>DateTime</type>
</CustomField>