Doc/force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Relationship_Pairing_Wall_Count__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Pairing_Wall_Count__c</fullName>
    <label>Relationship Pairing Wall Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>