Doc/force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Sent_Notification_Count__c.field-meta.xml
<CustomField>
    <fullName>Sent_Notification_Count__c</fullName>
    <label>Sent Notification Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>