Doc/force-app/main/default/objects/Wall_Builder_Summary_Metric__c/fields/Walls_With_Acknowledgements_Count__c.field-meta.xml
<CustomField>
    <fullName>Walls_With_Acknowledgements_Count__c</fullName>
    <label>Walls With Acknowledgements Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>